kubernetes/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: api
