kubernetes/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: web
