kubernetes/minikube-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: emojigen.pro
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 8080
          - path: /api/
            backend:
              serviceName: api
              servicePort: 5000
